Add feature for user to get their internet troubles
