# swagger/v1/swagger.yaml
@@ -45,13 +45,40 @@ paths:
                     type: integer
                   size:
                     type: integer
+                  total_page:
+                    type: integer
+                  total_size:
+                    type: integer
                   internet_troubles:
                     type: array
+                    items:
+                      properties:
+                        id:
+                          type: integer
+                        user_id:
+                          type: integer
+                        trouble:
+                          type: string
+                        status:
+                          type: string
+                        category:
+                          type: string
+                        is_predicted:
+                          type: boolean
+                        created_at:
+                          type: string
+                        updated_at:
+                          type: string
+                        is_read_by_admin:
+                          type: string
+                          nullable: true
                 required:
                 - success
                 - message
                 - page
                 - size
+                - total_page
+                - total_size
                 - internet_troubles
         '403':
           description: Unauthorized
@@ -229,6 +256,95 @@ paths:
                   type: boolean
               required:
               - trouble
+    get:
+      summary: Get internet troubles
+      tags:
+      - InternetTrouble
+      parameters:
+      - name: Authorization
+        in: header
+        schema:
+          type: string
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: type
+        in: query
+        required: false
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Get internet troubles
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  page:
+                    type: integer
+                  size:
+                    type: integer
+                  total_page:
+                    type: integer
+                  total_size:
+                    type: integer
+                  internet_troubles:
+                    type: array
+                    items:
+                      properties:
+                        id:
+                          type: integer
+                        user_id:
+                          type: integer
+                        trouble:
+                          type: string
+                        status:
+                          type: string
+                        category:
+                          type: string
+                        is_predicted:
+                          type: boolean
+                        created_at:
+                          type: string
+                        updated_at:
+                          type: string
+                        is_read_by_admin:
+                          type: string
+                          nullable: true
+                required:
+                - success
+                - message
+                - page
+                - size
+                - total_page
+                - total_size
+                - internet_troubles
+        '403':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                required:
+                - success
+                - message
   "/api/v1/private/users":
     post:
       summary: Create new user
